--- a/style.css
+++ b/style.css
@@ -6,14 +6,16 @@ body {
 }
 
 header {
-	color: #fff;
+	color: #000;
 	text-align: center;
+	padding: 20px;
+	border: 1px solid #000;
 }
 
 main {
 	width: 50%;
-	padding: 20px 30px;
-	background-color: #4D394B;
+	padding: 50px 30px;
+	background: rgba(0,0,0,.5);
 	color: #fff;
 	margin: 50px auto;
 	border-radius: 25px;
