--- a/style.css
+++ b/style.css
@@ -6,10 +6,14 @@ body {
 }
 
 header {
-	color: #000;
+	color: #fff;
 	text-align: center;
 	padding: 20px;
 	border: 1px solid #000;
+}
+
+h1 {
+	text-shadow: 2px 2px 5px #000;
 }
 
 main {
