--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ h1 {
 	text-shadow: 2px 2px 5px #000;
 }
 
+@media screen and (max-width: 720px) { 
+	main {
+		width: 100%;
+	}
+}
+
 main {
 	width: 50%;
 	padding: 50px 30px;
