--- a/style.css
+++ b/style.css
@@ -17,12 +17,6 @@ h1 {
 	text-shadow: 2px 2px 5px #000;
 }
 
-@media screen and (max-width: 720px) { 
-	main {
-		width: 100%;
-	}
-}
-
 main {
 	width: 50%;
 	padding: 50px 30px;
@@ -30,6 +24,13 @@ main {
 	color: #fff;
 	margin: 50px auto;
 	border-radius: 25px;
+}
+
+@media screen and (max-width: 750px) { 
+	main {
+		width: 100%;
+		margin: auto auto;
+	}
 }
 
 button {
